Add plausible privacy-friendly analytics

--- a/pageTemplate.html
+++ b/pageTemplate.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -25,6 +26,11 @@
         font-size: 96pt;
       }
     </style>
+    <script
+      defer
+      data-domain="ispepitohome.com"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
   </head>
   <body>
     <div>
