--- a/pageTemplate.html
+++ b/pageTemplate.html
@@ -21,6 +21,7 @@
         align-items: center;
         justify-content: center;
         text-align: center;
+        min-height: 100vh;
       }
       h1 {
         font-size: 96pt;
