--- a/pageTemplate.html
+++ b/pageTemplate.html
@@ -22,6 +22,7 @@
         justify-content: center;
         text-align: center;
         min-height: 100vh;
+        margin: 0;
       }
       h1 {
         font-size: 96pt;
