--- a/pageTemplate.html
+++ b/pageTemplate.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>{{ pageTitle }}</title>
+    <title>Pepito was home</title>
     <meta name="description" content="{{ metaDescription }}" />
     <meta name="author" content="https://twitter.com/UTammet" />
 
-    <meta property="og:title" content="{{ metaTitle }}" />
+    <meta property="og:title" content="Find out if Pepito the cat is home or not" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ispepitohome.com" />
-    <meta property="og:description" content="{{ metaDescription }}" />
+    <meta property="og:description" content="Find out if Pepito the cat is home or not" />
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -26,7 +26,11 @@
       }
       h1 {
         margin-top: 0;
-        font-size: 96pt;
+        font-size: 64pt;
+      }
+      div {
+        padding: 0 32px;
+        overflow-wrap: anywhere;
       }
     </style>
     <script
@@ -37,8 +41,9 @@
   </head>
   <body>
     <div>
-      <h1>{{ contentTitle }}</h1>
-      <a href="{{{tweetLink}}}">{{ time }}</a>
+      <h1>Dunno</h1>
+      <p>Elon killed my free API access, so this page is now dead. It used to say either "Yes" or "No".</p>
+      <a href="https://twitter.com/PepitoTheCat">Check out pepito</a>
     </div>
   </body>
 </html>
